# spectrometer

./: .gitignore  .spectrometer.cc.swo  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.in  DownloadGTest.cmake  README.md  avascpec-config.cc  meas_config_type_builder.cc  spectrometer.cc  spectrometer.test.cc  spectrometer_config.cc  spectrometer_config_validator.cc  spectrometer_config_validator.test.cc  validator  validator.cc
config/: float.csv  meas_config.csv  spectrometer_config.csv  uint16.csv  uint32.csv  uint8.csv
include/: AvaSpecConnection.h  avaspec.h  avs_exception.h  avs_interface.h  avs_wrapper.h  meas_config_type_builder.h  parser.h  spectrometer.h  spectrometer_config_validator.h  spectrometer_structures.h  stringToNumber.h  validator.h  validator_structures.h
mock/: MockAvaSpecConnection.h
src/: avs_exception.cc  avs_interface.cc  avs_wrapper.cc  main.cc  meas_config_type_builder.cc  parser.cc  spectrometer.cc  spectrometer.cc.orig  test_meas_config.cc  validator.cc
test/: avs_wrapper.test.cc  meas_config_type_builder.test.cc  parser.csv  parser.test.cc  spectrometer.test.cc  validator.csv  validator.test.cc
util/: generate_meas_tests.py
